# FightyEngine

./: .gitignore  CMakeLists.txt  README.md
FightyEngine/: main.cpp
FightyEngine/graphics/: Renderer.cpp  Renderer.h  TextRenderer.cpp  WindowSystem.cpp  WindowSystem.h
FightyEngine/miacra/: ConfigManager.cpp  ConfigManager.h  Engine.cpp  Engine.h  README.txt  Util.cpp  Util.h
config/: cfg.ini
include/inih/: ini.c  ini.h
src/: README.txt
src/graphics/: WindowSystem.cpp
src/miacra/: Engine.cpp  Engine.h  Util.cpp  Util.h
